# TriggerSearch

./: CLAUDE.md  trigs.code-workspace
backend/: .dockerignore  Dockerfile  database.py  docker-compose.yml  main.py  models.py  pyproject.toml  requirements.txt
document/API/: rest_api.md
document/APP/: design.md  sequence.md
document/UI/: design.md
document/UI/mock/: trigs_ui_c2.jsx
document/UI/src/: App.jsx  main.jsx
document/account/: mail.md
document/database/: er.md  schema.md
document/infra/: CLI.md  name.md
document/infra/構成図/: multi_account.drawio  業務経験.drawio
infra/aws/trigs/: .gitignore  README.md
infra/aws/trigs/environments/dev/: backend.tf  main.tf  outputs.tf  provider.tf  variables.tf
infra/aws/trigs/module/network/: igw.tf  main.tf  subnet.tf  variables.tf  vpc.tf
infra/aws/trigs/module/shared/: main.tf  variables.tf
infra/構成図/: multi_account.drawio
